<?xml version="1.0" encoding="utf-8"?><!--
  ~ /*
  ~  * Copyright (C) Tnumber Pvt. Ltd., 2019 - All Rights Reserved
  ~  * Unauthorized copying of this file, via any medium is strictly prohibited
  ~  * Proprietary and confidential
  ~  * Written by Tnumber
  ~  */
  -->

<com.google.android.material.appbar.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/appBarHome"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:fitsSystemWindows="true">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/_50sdp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:contentDescription="@string/back_button"
            android:paddingHorizontal="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_12sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_arrow_back" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvToolBarTitle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:contentDescription="@string/heading_select_guests"
            android:fontFamily="@font/avenir_black"
            android:gravity="center_horizontal"
            android:text="@string/select_guests"
            android:textColor="@color/font_color"
            android:textSize="@dimen/text_size_sixteen"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/ivBack"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.appbar.AppBarLayout>

